crucible-concurrency/examples/cbl/infeasible.out.good
[Crux] Attempting to prove verification conditions.
[Crux] Found counterexample for verification goal
[Crux]   examples/cbl/infeasible.cbl:39:5: error: in main
[Crux]   ASDF
